--- a/public/presentation.html
+++ b/public/presentation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Index Page</title>
+    <title>Presentation</title>
     <link href="./css/framework.css" rel="stylesheet"/>
     <link href="./css/main.css" rel="stylesheet"/>
   </head>
@@ -65,14 +65,15 @@
     <div class="container">
       <div class="container__inner">
         <section class="content-main">
-          <h1 class="content-main__title">Web-агентство полного цикла для&nbsp;сферы услуг</h1><span class="content-main__subtitle">для малого бизнеса</span>
+          <h1 class="content-main__title">
+              Захватывающие <span class="text-green">презентации</span> с&nbsp;понятной структурой</h1><span class="content-main__subtitle">graphic design</span>
           <div class="row justify-content-end mt-3 mt-md-2">
             <div class="col-5 col-xl-6 col-lg-7 col-md-9 col-sm-12">
-              <p class="content-main__intro">
-                Разрабатываем лендинги и&nbsp;сайты. Создаём логотипы и&nbsp;фирменные стили. SEO-продвижение и&nbsp;настройка рекламы ведутся на&nbsp;основе тщательного анализа 
-                 ниши и&nbsp;конкурентов.
-              </p>
-              <button class="btn btn_callback" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Обсудить проект
+              <div class="content-main__intro">
+                <p>
+                  Вы можете заказать оформление презентации с&nbsp;нуля или&nbsp;редизайн уже&nbsp;существующей: структурируем и задизайним информацию. Поможем с&nbsp;написанием текстов</p>
+              </div>
+              <button class="btn btn_callback" data-fancybox="data-fancybox" data-src="#hidden-form" href="javascript:;">Заполнить бриф
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -31 512 512" width="16px" height="16px">
                   <path d="m123.195312 260.738281 63.679688 159.1875 82.902344-82.902343 142.140625 112.976562 100.082031-450-512 213.265625zm242.5-131.628906-156.714843 142.941406-19.519531 73.566407-36.058594-90.164063zm0 0"></path>
                 </svg>
@@ -80,122 +81,122 @@
             </div>
           </div>
         </section>
-        <aside class="service service_index-page mt-4 mt-xs-3">
-          <div class="service__col"><a class="item item_link" href="#" title="Сайт под ключ">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/web.svg" alt="Сайт под ключ" title="Сайт под ключ"/><span>Сайт под ключ</span></p>
-              <p class="item__intro">Срок: от 35 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Сайт на Tilda">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/tilda.svg" alt="Сайт на Tilda" title="Сайт на Tilda"/><span>Сайт на Tilda</span></p>
-              <p class="item__intro">Срок: от 4 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Разработка лого">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/design.svg" alt="Разработка лого" title="Разработка лого"/><span>Разработка лого</span></p>
-              <p class="item__intro">Срок: от 8 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Контекстная реклама">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/context.svg" alt="Контекстная реклама" title="Контекстная реклама"/><span>Контекстная реклама</span></p>
-              <p class="item__intro">Срок: от 6 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="E-mail рассылки">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/email.svg" alt="E-mail рассылки" title="E-mail рассылки"/><span>E-mail рассылки</span></p>
-              <p class="item__intro">Срок: от 2 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Презентации">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/presentation.svg" alt="Презентации" title="Презентации"/><span>Презентации</span></p>
-              <p class="item__intro">Срок: от 5 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="SEO">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/seo.svg" alt="SEO" title="SEO"/><span>SEO</span></p>
-              <p class="item__intro">Срок: от 14 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Контент">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/content.svg" alt="Контент" title="Контент"/><span>Контент</span></p>
-              <p class="item__intro">Срок: от 3 дней</p></a></div>
-          <div class="service__col"><a class="item item_link" href="#" title="Упаковка продукта">           
-              <p class="item__title item__title_has-icon mb-0"><img class="item__icon item__icon_inside-title" src="../icon/service/product.svg" alt="Упаковка продукта" title="Упаковка продукта"/><span>Упаковка продукта</span></p>
-              <p class="item__intro">Срок: от 24 дней</p></a></div>
-        </aside>
-        <section class="pt-5 pb-5 pb-lg-0 pt-xs-4">
-          <div class="row align-items-end">
-            <div class="col-6 col-xs-12">
-              <h4 class="text-uppercase">Новое в&nbsp;нашем портфолио</h4>
-            </div>
-            <div class="col-6 col-xs-12 text-right text-xs-left mt-sm-2"><a class="btn btn_action btn--small" href="portfolio.html">Все проекты</a>
+        <section class="pt-5 pb-5 pt-sm-3 pb-sm-3">
+          <div class="row mb-3">
+            <div class="col-4 col-lg-8 col-md-7 col-xs-12">
+              <h2 class="h3">Поможем <span class="text-green">реализовать </span>подходящее решение</h2>
             </div>
           </div>
-          <div class="portfolio portfolio_large mt-3 mt-sm-2"><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/corp-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">EuroComm</p>
-              <p class="portfolio__intro text-small">Сайт-визитка на MODx Revo</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/promo-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">KAM fish</p>
-              <p class="portfolio__intro text-small">Логотип и иконки для хайлайтс</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/store-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">Pelibox</p>
-              <p class="portfolio__intro text-small">Открытки для доставки еды</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/corp-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">Pelibox</p>
-              <p class="portfolio__intro text-small">Открытки для доставки еды</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/promo-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">KAM fish</p>
-              <p class="portfolio__intro text-small">Логотип и иконки для хайлайтс</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/corp-page.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">EuroComm</p>
-              <p class="portfolio__intro text-small">Сайт-визитка на MODx Revo</p></a>
+          <div class="row">
+            <div class="col-4 col-lg-10 col-sm-12 mb-lg-3">
+              <p class="content-main__intro">
+                Презентация — это отличный инструмент для&nbsp;внешних и&nbsp;внутренних нужд компании. Граммотная структура и&nbsp;визуал помогут вовлечь людей даже в&nbsp;самый скучный отчет</p>
+            </div>
+            <div class="col-8 col-lg-12">
+              <div class="service service_inside">
+                <div class="service__col">
+                  <div class="item item_service">
+                    <div class="item__title item_service__title">Цифровая презентация</div>
+                    <p class="item__intro">В&nbsp;формате pdf, хорошо подойдет для&nbsp;отправки по&nbsp;e-mail, демонстрации на&nbsp;выступлениях или&nbsp;презентации идей и&nbsp;отчетов на&nbsp;встречах с&nbsp;клиентами</p>
+                  </div>
+                </div>
+                <div class="service__col">
+                  <div class="item item_service">
+                    <div class="item__title item_service__title">Презентация для печати</div>
+                    <p class="item__intro">Станет отличным раздаточным материалом на выставке или&nbsp;другом мероприятии, подойдет для передачи отчета или исследования клиентам</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
-        <section class="pt-5 pb-5 pb-xs-4">
-          <div class="row">
-            <div class="col-5 col-xl-7 col-lg-10 col-sm-12">
-              <p class="h1">Мы знаем, как&nbsp;это <span class="text-green">работает</span></p>
+        <section>
+          <h4 class="text-uppercase mb-3">Недавно мы подготовили презентации</h4>
+          <div class="portfolio portfolio_large"> <a class="portfolio__col" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-promo">
+              <div class="item item_link">
+                <p class="item__title">«INTERSEAL»</p>
+                <p class="item__intro">редизайн корпоративной презентации для испанской компании</p><img class="img-fluid" src="/img/interseal-prev.jpg"/>
+              </div></a><a class="portfolio__col" href="javascript:;" data-fancybox="portfolio" data-src="#portfolio-guest">
+              <div class="item item_link">
+                <p class="item__title">«SOHO»</p>
+                <p class="item__intro">оформление шаблона презентации для рассылки клиентам</p><img class="img-fluid" src="/img/soho-prev.jpg"/>
+              </div></a>
+          </div>
+        </section>
+        <section class="pt-5 pb-5 pt-sm-3 pb-sm-3">
+          <div class="row mb-3">
+            <div class="col-8 col-xl-7 col-lg-10 col-sm-12 mb-2">
+              <p class="h1">Когда и&nbsp;кому пригодится граммотно  <span class="text-green">оформленная</span> презентация</p>
             </div>
           </div>
-          <div class="row mt-2 align-items-end">
-            <div class="col-8 col-xl-9 col-lg-10 col-sm-12">
-              <p>
-                Все рецепты SEO-бабушек и&nbsp;Digital-дедушек остались в&nbsp;прошлом. Мы не боимся брать ответственность за&nbsp;решения: нам доверились 100+ компаний 
-                и&nbsp;уже получили крутые результаты. Никаких штампов. Не&nbsp;пишем «сочные» тексты 
-                и&nbsp;не&nbsp;делаем «вкусные картинки», 
-                а&nbsp;помогаем привлечь клиентов на&nbsp;сайт.
-              </p>
-            </div>
-            <div class="col-4 col-xl-3 col-lg-10 col-sm-12 text-right text-lg-left mt-lg-2"><a class="btn btn_action btn--small" href="service.html">Наши услуги</a>
-            </div>
-          </div>
-          <div class="service service_category mt-3">
-            <div class="service__col service__col_first">
+          <div class="service">
+            <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">fullstack development</div><img class="item_service__image d-sm-none" src="/img/fullstack.jpg"/><img class="item_service__image d-none d-sm-block" src="/img/fullstack-mobile.jpg"/>
-              </div>
-            </div>
-            <div class="service__col item">
-              <div class="item item_service">
-                <div class="item__title item_service__title">google ads & yandex direct</div><img class="item_service__image" src="/img/ads.jpg"/>
+                <div class="item__title">Руковоство</div>
+                <div class="item__intro">Визуализация итогов года, оформленние отчетности или&nbsp;презентация стратегии развития произведут нужное впечатление при должном оформлении</div>
               </div>
             </div>
             <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">create content</div><img class="item_service__image" src="/img/content.jpg"/>
+                <div class="item__title">HR</div>
+                <div class="item__intro">Информация для&nbsp;сотрудников, образовательные материалы или&nbsp;рассказ о&nbsp;ценностях компании проще запомняться в виде лаконичного pdf-материала</div>
               </div>
             </div>
             <div class="service__col">
               <div class="item item_service">
-                <div class="item__title item_service__title">graphic design</div><img class="item_service__image" src="/img/design.jpg"/>
-              </div>
-            </div>
-            <div class="service__col">
-              <div class="item item_service">
-                <div class="item__title item_service__title">support</div><img class="item_service__image" src="/img/support.jpg"/>
+                <div class="item__title">Маркетинг</div>
+                <div class="item__intro">Слайды для конференции, исследования и отчеты или запуск нового продукта лучше выполнят свою задачу в формате понятной презентации</div>
               </div>
             </div>
           </div>
-          <div class="content-main mt-5 mt-sm-3">
-            <h4 class="content-main__title content-main__title_secondary">
-              Акулы пера? Тигры веб-дизайна? Алигаторы маркетинга? У&nbsp;нас <span class="text-green">не&nbsp;зоопарк</span>, а&nbsp;сильная команда.</h4><span class="content-main__subtitle">dream team</span>
-            <div class="row justify-content-end mt-3 mt-sm-2">
-              <div class="col-4 col-lg-6 col-sm-12">
-                <p class="lead text-bolder">При работе над проектами:</p>
-                <p class="content-main__list">заключаем договор</p>
-                <p class="content-main__list">погружаемся в тему</p>
-                <p class="content-main__list">избегаем клише</p>
-                <p class="content-main__list">ориентируемся на результат</p>
-                <p class="content-main__list">постоянно взаимодействуем с клиентом</p>
+          <div class="row mt-5 mr-sm-3">
+            <div class="col-4 col-lg-8 col-md-10 col-sm-12 mb-lg-3">
+              <h4 class="text-white mb-3 mb-lg-2">Сделаем всё  <span class="d-block">качественно и&nbsp;в&nbsp;срок<span class="text-green">.</span></span></h4>
+              <div class="content-intro">
+                <ul>
+                  <li>Заключаем официальный договор</li>
+                  <li>Указываем сроки, перечень услуг и стоимость</li>
+                  <li>Подписываем договор в двух экземплярах</li>
+                </ul>
+                <p class="text-grey">
+                  Если фиксированные тарифы не&nbsp;подошли — напишите нам и&nbsp;обсудим индивидуальный бюджет на&nbsp;разработку для&nbsp;вашего проекта</p>
               </div>
-              <div class="col-4 col-lg-6 col-sm-12 mt-sm-2">
-                <p class="lead text-bolder">Что мы умеем простыми словами:</p>
-                <p class="content-main__list">писать интересные тексты</p>
-                <p class="content-main__list">рисовать стильные сайты</p>
-                <p class="content-main__list">делать рекламу и она работает</p>
-                <p class="content-main__list">настраивать удобную админку</p>
-                <p class="content-main__list">создавать лого, которые нравятся</p>
+            </div>
+            <div class="col-8 col-lg-12">
+              <div class="item item_price item_price-promo mb-2" data-fancybox="promo" data-src="#promo1">
+                <div class="item_price__content">
+                  <p class="item_price__title">Optimal</p>
+                  <p class="item_price__intro">Оформление презентации с нуля, создание архитектуры презентации, коррекция подачи информации</p>
+                  <div class="item_price__group">
+                    <div class="item_price__label">до 10 слайдов</div>
+                    <div class="item_price__label">текст до 5000 зн.</div>
+                    <div class="item_price__label">помощь с формулировками</div>
+                    <div class="item_price__label">формат на выбор</div>
+                    <div class="item_price__label">передача исходных файлов</div>
+                  </div>
+                </div>
+                <div class="item_price__info">
+                  <p class="item_price__title">14.900</p>
+                  <div class="item_price__add">+1.500</div>
+                  <div class="item_price__add-intro">за доп. слайд</div>
+                </div>
+              </div>
+              <div class="item item_price mb-2" data-fancybox="promo" data-src="#promo2">
+                <div class="item_price__content">
+                  <p class="item_price__title">Light</p>
+                  <p class="item_price__intro">Переоформление существующей презентации, коррекция подачи информации и работа над структурой</p>
+                  <div class="item_price__group">
+                    <div class="item_price__label">до 10 слайдов</div>
+                    <div class="item_price__label">помощь с формулировками</div>
+                    <div class="item_price__label">формат на выбор</div>
+                    <div class="item_price__label">передача исходных файлов</div>
+                  </div>
+                </div>
+                <div class="item_price__info">
+                  <p class="item_price__title">9.900</p>
+                  <div class="item_price__add">+1.000</div>
+                  <div class="item_price__add-intro">за доп. слайд</div>
+                </div>
               </div>
             </div>
           </div>
