--- a/public/index.html
+++ b/public/index.html
@@ -49,17 +49,17 @@
           </form>
         </div>
       </div>
-      <div class="portfolio portfolio_navbar mt-2"><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/portfolio-1.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">EuroComm</p>
-              <p class="portfolio__intro text-small">Сайт-визитка на MODx Revo</p></a><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/portfolio-2.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">KAM fish</p>
-              <p class="portfolio__intro text-small">Логотип и иконки для&nbsp;хайлайтс</p></a><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/portfolio-3.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">Pelibox</p>
-              <p class="portfolio__intro text-small">Открытки для доставки еды</p></a><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/portfolio-1.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">EuroComm</p>
-              <p class="portfolio__intro text-small">Сайт-визитка на MODx Revo</p></a><a class="portfolio__col mt-xs-2" href="text.html"><img class="img-fluid" src="/demo/portfolio-2.jpg"/>
-              <p class="portfolio__title text-small text-bold text-uppercase">KAM fish</p>
-              <p class="portfolio__intro text-small">Логотип и иконки для&nbsp;хайлайтс</p></a>
+      <div class="portfolio portfolio_navbar mt-2"><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/portfolio-1.jpg"/>
+              <p class="portfolio__title portfolio_navbar__title">EuroComm</p>
+              <p class="portfolio__intro portfolio_navbar__intro">Сайт-визитка на MODx Revo</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/portfolio-2.jpg"/>
+              <p class="portfolio__title portfolio_navbar__title">KAM fish</p>
+              <p class="portfolio__intro portfolio_navbar__intro">Логотип и иконки для&nbsp;хайлайтс</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/portfolio-3.jpg"/>
+              <p class="portfolio__title portfolio_navbar__title">Pelibox</p>
+              <p class="portfolio__intro portfolio_navbar__intro">Открытки для доставки еды</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/portfolio-1.jpg"/>
+              <p class="portfolio__title portfolio_navbar__title">EuroComm</p>
+              <p class="portfolio__intro portfolio_navbar__intro">Сайт-визитка на MODx Revo</p></a><a class="portfolio__col" href="text.html"><img class="img-fluid" src="/demo/portfolio-2.jpg"/>
+              <p class="portfolio__title portfolio_navbar__title">KAM fish</p>
+              <p class="portfolio__intro portfolio_navbar__intro">Логотип и иконки для&nbsp;хайлайтс</p></a>
       </div>
     </nav>
     <div class="container">
@@ -234,6 +234,9 @@
           </div>
         </div>
       </aside>
+      <div class="modal modal_cookies modal_cookies--show" id="cookies">
+        <p class="modal_cookies__content">Мы используем файлы cookie. <a class="modal_cookies__link" href="[[++policy]]" target="_blank" title="Политика обработки персональных данных">Политика обработки персональных данных</a></p><a class="modal_cookies__btn" id="cookiesagree" href="#">Принять</a>
+      </div>
     </div>
     <footer class="container">
       <div class="footer container__inner">
